avoid debug build failing on an assert for tdf#144537

It really should be an assert, and something is clearly wrong,
as the chart shows one row twice after the operation, but I have
no idea how to fix this, and it's not that critical, so reduce
to just a warning until somebody fixes the problem.

Change-Id: Idf0a3496a6f0472301ecb3c0e53ead43312c2f84
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129980
Tested-by: Luboš Luňák <l.lunak@collabora.com>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>